--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<title>Index</title>
 </head>
 <body>
-	<a href="yoshi175.github.com/yoshi175/VT17WebutvTakeyoshiMurase/blob/master/assets/pages/Uppgift1.html">Uppgift 1</a><br>
+	<a href="file:///C:/Users/Takeyoshi/Desktop/VT17WebutvTakeyoshiMurase/assets/pages/Uppgift1.html">Uppgift 1</a><br>
 	<a href="file:///C:/Users/Takeyoshi/Desktop/VT17WebutvTakeyoshiMurase/assets/pages/Uppgift2.html">Uppgift 2</a><br>
 	<a href="file:///C:/Users/Takeyoshi/Desktop/VT17WebutvTakeyoshiMurase/assets/pages/Uppgift3.html">Uppgift 3</a><br>
 	<a href="file:///C:/Users/Takeyoshi/Desktop/VT17WebutvTakeyoshiMurase/assets/pages/Uppgift4.html">Uppgift 4</a><br>
