--- a/assets/pages/Uppgift2.html
+++ b/assets/pages/Uppgift2.html
@@ -53,7 +53,7 @@
 
 	<hr>
 
-	<footer> <!--Omslöt den nedre delen av dokumentet med en footer tad istället för en div tag.-->
+	<footer> <!--Omslöt den nedre delen av dokumentet/sidan med en footer tad.-->
 		<small>
 			This has nothing to do with the real Facebook other than showing a simple HTML element semantic example with the use of a typical facebook post entry <br>
 			<a href="https://www.facebook.com/">Click here to find the original facebook</a>
