--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 </head>
 <body>
 	<a href="https://yoshi175.github.io/VT17WebutvTakeyoshiMurase/assets/pages/Uppgift1.html">Uppgift 1</a><br>
-	<a href="file:///C:/Users/Takeyoshi/Desktop/VT17WebutvTakeyoshiMurase/assets/pages/Uppgift2.html">Uppgift 2</a><br>
-	<a href="file:///C:/Users/Takeyoshi/Desktop/VT17WebutvTakeyoshiMurase/assets/pages/Uppgift3.html">Uppgift 3</a><br>
-	<a href="file:///C:/Users/Takeyoshi/Desktop/VT17WebutvTakeyoshiMurase/assets/pages/Uppgift4.html">Uppgift 4</a><br>
-	<a href="file:///C:/Users/Takeyoshi/Desktop/VT17WebutvTakeyoshiMurase/assets/pages/Uppgift5.html">Uppgift 5</a><br>
-	<a href="file:///C:/Users/Takeyoshi/Desktop/VT17WebutvTakeyoshiMurase/assets/pages/Uppgift6.html">Uppgift 6</a><br>
-	<a href="file:///C:/Users/Takeyoshi/Desktop/VT17WebutvTakeyoshiMurase/assets/pages/Slutuppgift.html">Slutuppgift</a>
+	<a href="https://yoshi175.github.io/VT17WebutvTakeyoshiMurase/assets/pages/Uppgift2.html">Uppgift 2</a><br>
+	<a href="https://yoshi175.github.io/VT17WebutvTakeyoshiMurase/assets/pages/Uppgift3.html">Uppgift 3</a><br>
+	<a href="https://yoshi175.github.io/VT17WebutvTakeyoshiMurase/assets/pages/Uppgift4.html">Uppgift 4</a><br>
+	<a href="https://yoshi175.github.io/VT17WebutvTakeyoshiMurase/assets/pages/Uppgift5.html">Uppgift 5</a><br>
+	<a href="https://yoshi175.github.io/VT17WebutvTakeyoshiMurase/assets/pages/Uppgift6.html">Uppgift 6</a><br>
+	<a href="https://yoshi175.github.io/VT17WebutvTakeyoshiMurase/assets/pages/Slutuppgift.html">Slutuppgift</a>
 </body>
 </html>
