--- a/assets/pages/Uppgift1.html
+++ b/assets/pages/Uppgift1.html
@@ -17,37 +17,37 @@
 			<tr>
 				<td>#1</td>
 				<td>Klar</td>
-				<td><a href="file:///C:/Users/Takeyoshi/Desktop/VT17WebutvTakeyoshiMurase/assets/pages/Uppgift1.html">Uppgift 1 länk</a></td>
+				<td><a href="https://yoshi175.github.io/VT17WebutvTakeyoshiMurase/assets/pages/Uppgift1.html">Uppgift 1 länk</a></td>
 			</tr>
 			<tr>
 				<td>#2</td>
 				<td>Klar</td>
-				<td><a href="file:///C:/Users/Takeyoshi/Desktop/VT17WebutvTakeyoshiMurase/assets/pages/Uppgift2.html">Uppgift 2 länk</a></td>
+				<td><a href="https://yoshi175.github.io/VT17WebutvTakeyoshiMurase/assets/pages/Uppgift2.html">Uppgift 2 länk</a></td>
 			</tr>
 			<tr>
 				<td>#3</td>
 				<td>Inte Klar</td>
-				<td><a href="file:///C:/Users/Takeyoshi/Desktop/VT17WebutvTakeyoshiMurase/assets/pages/Uppgift3.html">Uppgift 3 länk</a></td>
+				<td><a href="https://yoshi175.github.io/VT17WebutvTakeyoshiMurase/assets/pages/Uppgift3.html">Uppgift 3 länk</a></td>
 			</tr>
 			<tr>
 				<td>#4</td>
 				<td>Inte Klar</td>
-				<td><a href="file:///C:/Users/Takeyoshi/Desktop/VT17WebutvTakeyoshiMurase/assets/pages/Uppgift4.html">Uppgift 4 länk</a></td>
+				<td><a href="https://yoshi175.github.io/VT17WebutvTakeyoshiMurase/assets/pages/Uppgift4.html">Uppgift 4 länk</a></td>
 			</tr>
 			<tr>
 				<td>#5</td>
 				<td>Inte Klar</td>
-				<td><a href="file:///C:/Users/Takeyoshi/Desktop/VT17WebutvTakeyoshiMurase/assets/pages/Uppgift5.html">Uppgift 5 länk</a></td>
+				<td><a href="https://yoshi175.github.io/VT17WebutvTakeyoshiMurase/assets/pages/Uppgift5.html">Uppgift 5 länk</a></td>
 			</tr>
 			<tr>
 				<td>#6</td>
 				<td>Inte Klar</td>
-				<td><a href="file:///C:/Users/Takeyoshi/Desktop/VT17WebutvTakeyoshiMurase/assets/pages/Uppgift6.html">Uppgift 6 länk</a></td>
+				<td><a href="https://yoshi175.github.io/VT17WebutvTakeyoshiMurase/assets/pages/Uppgift6.html">Uppgift 6 länk</a></td>
 			</tr>
 			<tr>
 				<td>#Slutuppgift</td>
 				<td>Inte Klar</td>
-				<td><a href="file:///C:/Users/Takeyoshi/Desktop/VT17WebutvTakeyoshiMurase/assets/pages/Slutuppgift.html">Slutuppgift länk</a></td>
+				<td><a href="https://yoshi175.github.io/VT17WebutvTakeyoshiMurase/assets/pages/Slutuppgift.html">Slutuppgift länk</a></td>
 			</tr>
 		</tbody>
 	</table>
