--- a/assets/pages/Uppgift2.html
+++ b/assets/pages/Uppgift2.html
@@ -11,49 +11,49 @@
 	<meta charset="UTF-8">
 </head>
 <body>
-
-	<header> <!--Omslöt översta rubriken av dokumentet med en header tag.-->
-			<h1>Facebookcopy</h1>
+	<header> <!--Ändrade till en header tag för att innehållet redovisar kort om vad nedanstående handlar om.-->
+		<h1>Facebookcopy</h1>
 	</header>
-	<nav> <!--Omslöt de översta länkarna med en nav tag, för att de representerar navigators länkar för sidan-->
+	<nav> <!--Ändrade till en nav tag för att innehållet innehåller navigationslänkar på sidan.-->
 		<a href="#home">Home</a>
 		<a href="#profile">Profile</a>
 		<a href="#Settings">Settings</a>
 	</nav>
-	
+
 	<hr>
 
-	<article> <!--Omslöt första inlägget med en article tag -->
-		<h2>MusikLover56's status</h2>
+	<article> <!--Ändrade till en article tag för att man skulle kunna ta bort allt innehåll innuti taggen och sidan skulle fortfarande/samtidigt vara läsbar. Sidan är i regel oberoende av article taggen.-->
+		<header> <!--Ändrade till en header tag för att innehållet redovisar kort om vad nedanstående handlar om.-->
+			<h2>MusikLover56's status</h2>
+			<p>Har "We are the champions - Queen" gjorts om!? &#128347; <time>2010-02-07 10:32</time> <!--Ändrade till en time tag för att innehåller är en tidpunkt-->
+		</header>
 		<p>
-			Har "We are the champions - Queen" gjorts om!? &#128347; <span>2010-02-07 10:32</span> <!--har flyttat ner denna paragraph till tillhörande stycke och la till en <br> tag.-->
-			<br>
 			Jag lyssnade på låten We are the Champions by Queen häromdagen och sjöng med, men när dem sjöng "No time for losers, cause we are the Champions" så avslutade jag stycket med "... of the world" men det gjorde dem inte låten, har den gjorts om?? är säker på att "of the world" ska vara med!
 		</p>
+		<section> <!--Ändrade till en section tag för att innehållet (ska) innehåller bestämt tema.-->
+			<h3>Comments</h3>
+			<article> <!--Ändrade till en article tag för att man skulle kunna ta bort allt innehåll innuti taggen och sidan skulle fortfarande/samtidigt vara läsbar. Sidan är i regel oberoende av article taggen.-->
+				<footer> <!--Ändrade till en footer tag för att innehållet redovisar en författare/källa/, vem det är som har skrivit något.-->
+					<h4>Cat_trainer31's post:</h4>
+				</footer>
+				<p>
+					Du har nog fel.. lyssna om &#128347; <time>2010-02-07 20:59</time> <!--Ändrade till en time tag för att innehåller är en tidpunkt-->
+				</p>
+			</article>
+			<article> <!--Ändrade till en article tag för att man skulle kunna ta bort allt innehåll innuti taggen och sidan skulle fortfarande/samtidigt vara läsbar. Sidan är i regel oberoende av article taggen.-->
+				<footer> <!--Ändrade till en footer tag för att innehållet redovisar en författare/källa/, vem det är som har skrivit något.-->
+					<h4>Realist11's post:</h4>
+				</footer>
+				<p>
+					Du har upptäckt Mandela effecten, läs mer här <a href="https://www.buzzfeed.com/christopherhudspeth/crazy-examples-of-the-mandela-effect-that-will-make-you-ques?utm_term=.jqwGYwq6v1#.qePa790Nvl">mandela effecten</a> &#128347; <time>2010-02-08 05:37</time> <!--Ändrade till en time tag för att innehåller är en tidpunkt-->
+				</p>
+			</article>
+		</section>
 	</article>
-	
-	<section> <!--Omslöt kommentarsfältet med en section tag-->
-		<h3>Comments</h3>
-		<article> <!--Omslöt samtilga kommentarerna med en varsin article tag-->
-			<h4>Cat_trainer31's post:</h4>
-			<p>
-				Du har nog fel.. lyssna om &#128347; <span>2010-02-07 20:59</span>
-			</p>
-		</article>
-	
-		<article> <!--Omslöt samtilga kommentarerna med en varsin article tag-->
-			<h4>Realist11's post:</h4>
-			<p>
-				Du har upptäckt Mandela effecten, läs mer här
-				<a href="https://www.buzzfeed.com/christopherhudspeth/crazy-examples-of-the-mandela-effect-that-will-make-you-ques?utm_term=.jqwGYwq6v1#.qePa790Nvl">Mandela effecten</a> 
-				&#128347; <span>2010-02-08 05:37</span>
-			</p>
-		</article>
-	</section>
 
 	<hr>
 
-	<footer> <!--Omslöt den nedre delen av dokumentet/sidan med en footer tad.-->
+	<footer> <!--Ändrade till en footer tag för att innehållet redovisar en författare/källa/, vem det är som har skrivit något.-->
 		<small>
 			This has nothing to do with the real Facebook other than showing a simple HTML element semantic example with the use of a typical facebook post entry <br>
 			<a href="https://www.facebook.com/">Click here to find the original facebook</a>
