--- a/assets/pages/Uppgift3.html
+++ b/assets/pages/Uppgift3.html
@@ -1,11 +1,51 @@
+<!--Elev: Takeyoshi Murase-->
 <!DOCTYPE html>
 <html>
 <head>
+	<link rel="stylesheet" type="text/css" href="C:/Users/Takeyoshi/Desktop/VT17WebutvTakeyoshiMurase/assets/style/Uppgift3(layout)StyleSheet.css">
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Uppgift 3</title>
 </head>
 <body>
-	<h1>Uppgift 3 under arbete</h1>
+	<header>
+		<h1>Javascript</h1>
+		<p>En wikipedias sida om Javascript</p>
+	</header>
+	<aside>
+		<img id="js" src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/99/Unofficial_JavaScript_logo_2.svg/480px-Unofficial_JavaScript_logo_2.svg.png">
+		<nav>
+			<h2>Referenser</h2>
+			<ul>
+				<li><a href="http://www.w3schools.com/js/js_htmldom.asp">JS DOM</a></li>
+				<li><a href="https://sv.wikipedia.org/wiki/AJAX">AJAX</a></li>
+				<li><a href="https://www.codecademy.com/learn/javascript">JS Codecademy</a></li>
+			</ul>
+		</nav>
+	</aside>
+	<main>
+		<article>
+			<h3>Introduktion</h3>
+			<pre>
+JavaScript är ett prototyp-baserat skriptspråk som är dynamiskt, svagt typat och hanterar funktioner som första-klass-objekt. Javascript används främst på klientsidan i webbtillämpningar, det vill säga exekveras i en webbläsares javascript-motor. Då Javascript används i webbläsare arbetar det mot ett gränssnitt som kallas Document Object Model (DOM). Vanligtvis inbäddas Javascript i, eller inkluderas från, HTML-sidor. Exempel på användningsområden är kontroll av ifyllda fält innan formulär skickas till en server, funktioner för att visa eller dölja delar av en sida och växling av annonsbilder med visst intervall. Javascript kan även användas för mer avancerade funktioner i en webbläsare såsom spel och bildbehandling.
+
+Skriptspråket kan implementeras i andra program än webbläsare. Ett numera vanligt exempel av implementation utanför webbläsaren är Node.js, som tillåter utvecklaren att använda javascript på serversidan för att kunna arbeta med anslutningar till databaser, skicka e-post-meddelanden och så vidare.
+
+En Javascriptmotor är en specialiserad programvara som exekverar Javascript, särskilt för webbläsare.
+
+<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/d1/Brendan_Eich_Mozilla_Foundation_official_photo.jpg/250px-Brendan_Eich_Mozilla_Foundation_official_photo.jpg">
+<figcaption>Brendan Eich</figcaption>
+    
+Javascript utvecklades ursprungligen av Brendan Eich,[1] då under namnet Mocha som senare ändrades först till Livescript men i och med att Netscape ungefär samtidigt började stödja Sun Microsystems programspråk Java i syfte att kunna ha miniprogram i webbläsaren, valde man att kalla det Javascript, främst i marknadsföringssyfte. Förutom namnet har Javascript inget med programspråket Java att göra förutom att de delar programspråket C:s syntax. Det faktum att namnen liknar varandra har lett till en del förvirring.
+
+Javascript dök för första gången upp i Netscape Navigator 2.0B3, släppt i december 1995. Microsoft skapade en egen variant av Javascript, som namngavs JScript för att undvika varumärkesintrång. Denna kom i version 3.0 av Internet Explorer. JScript och Javascript skilde sig markant på inbyggda objekt och funktioner vilket ledde fram till behovet av en gemensam standard för skriptspråket, standarden kom att kallas för ECMA-262, även känt som Ecmascript.
+			</pre>
+		</article>
+	</main>
+	<footer>
+		<p>En students skolarbete från Jensen Education</p>
+		<a href="https://www.jenseneducation.se/">Jensen Education</a>
+		<a style="margin-left: 10px; " href="https://github.com/yoshi175/VT17WebutvTakeyoshiMurase">Github</a>
+	</footer>
 </body>
 </html>
