--- a/assets/pages/Uppgift4.html
+++ b/assets/pages/Uppgift4.html
@@ -1,11 +1,55 @@
+<!--Elev: Takeyoshi Murase-->
 <!DOCTYPE html>
 <html>
 <head>
+	<link rel="stylesheet" type="text/css" href="C:\Users\Takeyoshi\Desktop\VT17WebutvTakeyoshiMurase\assets\style\Uppgift4(animering)StyleSheet.css">
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Uppgift 4</title>
 </head>
 <body>
-	<h1>Uppgift 4 under arbete</h1>
+	<div class="odd">
+		<h1>Animeringar</h1>
+	</div>
+	
+	<div class="even">
+		<img class="heart" src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/44/Coraz%C3%B3n.svg/200px-Coraz%C3%B3n.svg.png">
+	</div>
+	
+	<div class="odd">
+		<img class="flower" src="http://images.clipartbro.com/58/animated-flower-pictures-58212.png">
+	</div>
+	
+	<div class="even">
+		<img class="car" src="https://img.clipartfest.com/08a94f77fe9aa57f37f377ad98b337e4_car-clipart-animated-cars-clip-art_600-272.png">
+	</div>
+	
+	<div class="odd">
+		<img class="spinner" src="https://media.24ways.org/2009/15/assets/img/spinner.png">
+	</div>
+	
+	<div class="even">
+		<div class="square"></div>
+	</div>
+	
+	<div class="odd">
+		<img class="wheel" src="https://img.clipartfest.com/2145fbb00008e90084f8fab297a6fa4b_bike-wheel-clipart-wheel-clipart-black-and-white_256-256.png">
+	</div>
+	
+	<div class="even">
+		<div class="hoverMe">
+			<pre style="margin-top: 30px; overflow: hidden;">Hover me!	Hi there :)</pre>
+		</div>
+	</div>
+	
+	<div class="odd">
+		<div class="bouncing"></div>
+	</div>
+	
+	<div class="even">
+		<div class="pushMe">
+			<p style="margin-top: 30px; overflow: hidden;">Push me!</p>
+		</div>
+	</div>
 </body>
 </html>
