--- a/assets/pages/Uppgift4.html
+++ b/assets/pages/Uppgift4.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<link rel="stylesheet" type="text/css" href="C:\Users\Takeyoshi\Desktop\VT17WebutvTakeyoshiMurase\assets\style\Uppgift4(animering)StyleSheet.css">
+	<link rel="stylesheet" type="text/css" href="https://yoshi175.github.io/VT17WebutvTakeyoshiMurase/assets/style/Uppgift4(animering)StyleSheet.css">
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Uppgift 4</title>
