--- a/assets/pages/Uppgift1.html
+++ b/assets/pages/Uppgift1.html
@@ -26,12 +26,12 @@
 			</tr>
 			<tr>
 				<td>#3</td>
-				<td>Inte Klar</td>
+				<td>Klar</td>
 				<td><a href="https://yoshi175.github.io/VT17WebutvTakeyoshiMurase/assets/pages/Uppgift3.html">Uppgift 3 länk</a></td>
 			</tr>
 			<tr>
 				<td>#4</td>
-				<td>Inte Klar</td>
+				<td>Klar</td>
 				<td><a href="https://yoshi175.github.io/VT17WebutvTakeyoshiMurase/assets/pages/Uppgift4.html">Uppgift 4 länk</a></td>
 			</tr>
 			<tr>
