--- a/assets/pages/Uppgift3.html
+++ b/assets/pages/Uppgift3.html
@@ -33,8 +33,10 @@ Skriptspråket kan implementeras i andra program än webbläsare. Ett numera van
 
 En Javascriptmotor är en specialiserad programvara som exekverar Javascript, särskilt för webbläsare.
 
-<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/d1/Brendan_Eich_Mozilla_Foundation_official_photo.jpg/250px-Brendan_Eich_Mozilla_Foundation_official_photo.jpg">
+<figure>
+<img alt="Brendan Eich" src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/d1/Brendan_Eich_Mozilla_Foundation_official_photo.jpg/250px-Brendan_Eich_Mozilla_Foundation_official_photo.jpg">
 <figcaption>Brendan Eich</figcaption>
+</figure>
     
 Javascript utvecklades ursprungligen av Brendan Eich,[1] då under namnet Mocha som senare ändrades först till Livescript men i och med att Netscape ungefär samtidigt började stödja Sun Microsystems programspråk Java i syfte att kunna ha miniprogram i webbläsaren, valde man att kalla det Javascript, främst i marknadsföringssyfte. Förutom namnet har Javascript inget med programspråket Java att göra förutom att de delar programspråket C:s syntax. Det faktum att namnen liknar varandra har lett till en del förvirring.
 
