--- a/assets/pages/Uppgift3.html
+++ b/assets/pages/Uppgift3.html
@@ -32,12 +32,12 @@ JavaScript är ett prototyp-baserat skriptspråk som är dynamiskt, svagt typat 
 Skriptspråket kan implementeras i andra program än webbläsare. Ett numera vanligt exempel av implementation utanför webbläsaren är Node.js, som tillåter utvecklaren att använda javascript på serversidan för att kunna arbeta med anslutningar till databaser, skicka e-post-meddelanden och så vidare.
 
 En Javascriptmotor är en specialiserad programvara som exekverar Javascript, särskilt för webbläsare.
-
-<figure>
-<img alt="Brendan Eich" src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/d1/Brendan_Eich_Mozilla_Foundation_official_photo.jpg/250px-Brendan_Eich_Mozilla_Foundation_official_photo.jpg">
-<figcaption>Brendan Eich</figcaption>
-</figure>
-    
+			</pre>
+			<figure>
+				<img alt="Brendan Eich" src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/d1/Brendan_Eich_Mozilla_Foundation_official_photo.jpg/250px-Brendan_Eich_Mozilla_Foundation_official_photo.jpg">
+				<figcaption>Brendan Eich</figcaption>
+			</figure>
+			<pre>
 Javascript utvecklades ursprungligen av Brendan Eich,[1] då under namnet Mocha som senare ändrades först till Livescript men i och med att Netscape ungefär samtidigt började stödja Sun Microsystems programspråk Java i syfte att kunna ha miniprogram i webbläsaren, valde man att kalla det Javascript, främst i marknadsföringssyfte. Förutom namnet har Javascript inget med programspråket Java att göra förutom att de delar programspråket C:s syntax. Det faktum att namnen liknar varandra har lett till en del förvirring.
 
 Javascript dök för första gången upp i Netscape Navigator 2.0B3, släppt i december 1995. Microsoft skapade en egen variant av Javascript, som namngavs JScript för att undvika varumärkesintrång. Denna kom i version 3.0 av Internet Explorer. JScript och Javascript skilde sig markant på inbyggda objekt och funktioner vilket ledde fram till behovet av en gemensam standard för skriptspråket, standarden kom att kallas för ECMA-262, även känt som Ecmascript.
