--- a/assets/pages/Uppgift3.html
+++ b/assets/pages/Uppgift3.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<link rel="stylesheet" type="text/css" href="https://yoshi175.github.io/VT17WebutvTakeyoshiMurase/assets/style/Uppgift3(layout)StyleSheet.css">
+	<link rel="stylesheet" type="text/css" href="C:/Users/Takeyoshi/Desktop/VT17WebutvTakeyoshiMurase/assets/style/Uppgift3(layout)StyleSheet.css">
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Uppgift 3</title>
@@ -13,7 +13,7 @@
 		<p>En wikipedias sida om Javascript</p>
 	</header>
 	<aside>
-		<img id="js" src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/99/Unofficial_JavaScript_logo_2.svg/480px-Unofficial_JavaScript_logo_2.svg.png">
+		<img alt="" id="js" src="C:/Users/Takeyoshi/Desktop/VT17WebutvTakeyoshiMurase/assets/resource/JavaScript_logo.jpg">
 		<nav>
 			<h2>Referenser</h2>
 			<ul>
