--- a/assets/pages/Uppgift3.html
+++ b/assets/pages/Uppgift3.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<link rel="stylesheet" type="text/css" href="../style/Uppgift3(layout)StyleSheet.css">
+	<link rel="stylesheet" type="text/css" href="https://yoshi175.github.io/VT17WebutvTakeyoshiMurase/assets/style/Uppgift3(layout)StyleSheet.css">
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Uppgift 3</title>
