--- a/assets/pages/Uppgift3.html
+++ b/assets/pages/Uppgift3.html
@@ -13,7 +13,7 @@
 		<p>En wikipedias sida om Javascript</p>
 	</header>
 	<aside>
-		<img alt="javascript logo" id="js" src="C:/Users/Takeyoshi/Desktop/VT17WebutvTakeyoshiMurase/assets/resource/JavaScript_logo.jpg">
+		<img alt="javascript logo" id="js" src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/99/Unofficial_JavaScript_logo_2.svg/480px-Unofficial_JavaScript_logo_2.svg.png">
 		<nav>
 			<h2>Referenser</h2>
 			<ul>
