--- a/assets/pages/Uppgift5.html
+++ b/assets/pages/Uppgift5.html
@@ -4,7 +4,7 @@
 	<head>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<link rel="stylesheet" type="text/css" href="../style/Uppgift5(validering)StyleSheet.css">
+		<link rel="stylesheet" type="text/css" href="https://yoshi175.github.io/VT17WebutvTakeyoshiMurase/assets/style/Uppgift5(validering)StyleSheet.css">
 		<title>Validering</title>
 	</head>
 	<body>
@@ -39,7 +39,7 @@
 		<div></div>
 
 		<script src="http://code.jquery.com/jquery-3.1.1.min.js" type="text/javascript"></script>
-		<script src="C:\Users\Takeyoshi\Desktop\VT17WebutvTakeyoshiMurase\assets\script\Uppgift5(validering)Javascript.js" type="text/javascript"></script>
+		<script src="https://yoshi175.github.io/VT17WebutvTakeyoshiMurase/assets/script/Uppgift5(validering)Javascript.js" type="text/javascript"></script>
 		
 	</body>
 </html>
