--- a/assets/pages/Uppgift5.html
+++ b/assets/pages/Uppgift5.html
@@ -23,7 +23,7 @@
 		<div class="leapYear">
 			<h2>Skottår</h2>
 			<p>Skriv in ett årtal för att kontrollera om det är ett skottår.</p>
-			<input id="leapYearInput" type="number" name="" placeholder="Årtal">
+			<input id="leapYearInput" type="number" name="year" placeholder="Årtal">
 			<button onclick="leapYear()">Kontrollera</button>
 			<p id="leapYearOrNotResult"></p>
 		</div>
@@ -32,7 +32,7 @@
 		<div class="sum">
 			<h2>Siffersumma</h2>
 			<p>Skriv in ett tal för att summera alla enskilda siffror.</p>
-			<input id="figureInput" type="number" name="" placeholder="Tal">
+			<input id="figureInput" type="number" name="figure" placeholder="Tal">
 			<button onclick="digitSum()">Beräkna</button>
 			<p id="digitSumResult"></p>
 		</div>
