--- a/assets/pages/Slutuppgift.html
+++ b/assets/pages/Slutuppgift.html
@@ -11,7 +11,7 @@
 		<h1 id="hh">Klassisk kladdkaka</h1>	
 	</header>
 	<img src="https://res.cloudinary.com/hufennija/image/upload/f_auto,q_50,fl_progressive,w_790,h_460,c_fill/1540843.jpg" alt="pic of a sticky brownie">
-	<p><a href="file:///C:/Users/Takeyoshi/Desktop/VT17WebutvTakeyoshiMurase/assets/pages/KladdkakaRecept.html">Recept</a></p>
+	<p><a href="https://yoshi175.github.io/VT17WebutvTakeyoshiMurase/assets/pages/KladdkakaRecept.html">Recept</a></p>
 	
 	<main>
 		<article class="fact">
