--- a/assets/pages/Slutuppgift.html
+++ b/assets/pages/Slutuppgift.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" type="text/css" href="../style/SlutuppgiftStyleSheet.css">
+	<link rel="stylesheet" type="text/css" href="https://yoshi175.github.io/VT17WebutvTakeyoshiMurase/assets/style/SlutuppgiftStyleSheet.css">
 	<title>Slutuppgift</title>
 </head>
 <body>
