--- a/assets/pages/KladdkakaRecept.html
+++ b/assets/pages/KladdkakaRecept.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" type="text/css" href="https://yoshi175.github.io/VT17WebutvTakeyoshiMurase/assets/style/Slutuppgift(recept)StyleSheet.css">
+	<link rel="stylesheet" type="text/css" href="../style/Slutuppgift(recept)StyleSheet.css">
 	<title>Recept på kladdkaka</title>
 	<style>
 		body {
@@ -16,8 +16,7 @@
 		<h1>Recept på kladdkaka &starf;</h1>
 	</header>
 	<aside>
-
-		<h2 id="ingredients">Ingredienser:</h2>
+		<h2>Ingredienser:</h2>
 		<label>Antal satser: <input onclick="recipe()" id="batch" type="number" name="portion" value="1" min="1" max="10" step="1"></label>
 		<ul>
 			<li id="butter">150 gram smör eller margarin</li>
@@ -28,7 +27,6 @@
 			<li id="flour">2 dl vetemjöl</li>
 		</ul>
 	</aside>
-	
 	<section id="description">
 		<h3>Gör så här:</h3>
 		<ol>
@@ -39,29 +37,19 @@
 			<li>Låt kakan kallna och ställ den sedan i kylen ca 1 timme. Sikta eventuellt över lite florsocker strax innan kakan ska serveras.<br><br></li>
 		</ol>
 		<img src="https://res.cloudinary.com/hufennija/image/upload/f_auto,q_50,fl_progressive,w_790,h_460,c_fill/1540843.jpg" alt="pic of a sticky brownie">
-		<!--
-		<section id="grade">
-		<h4>Betyg</h4>
-		<div class="rate" id="one"></div>
-		<div class="rate" id="two"></div>
-		<div class="rate" id="three"></div>
-		<div class="rate" id="four"></div>
-		<div class="rate" id="five"></div>
-		</section>
-		-->
-		<div class="stars">
+		<div class="ratingStars">
 			<h4>Betyg</h4>
 			<p id="ratingMeanValue">-/5</p>
-		  	<div class="rate">
-				<input onclick="ratingMeanValue()" type="radio" id="star5" name="rate" value="5" />
+		  	<div onclick="updateRate()" class="rate">
+				<input onclick="rateFive()" type="radio" id="star5" name="rate" value="5" />
 				<label for="star5" title="text">5 stars</label>
-				<input onclick="ratingMeanValue()" type="radio" id="star4" name="rate" value="4" />
+				<input onclick="rateFour()" type="radio" id="star4" name="rate" value="4" />
 				<label for="star4" title="text">4 stars</label>
-				<input onclick="ratingMeanValue()" type="radio" id="star3" name="rate" value="3" />
+				<input onclick="rateThree()" type="radio" id="star3" name="rate" value="3" />
 				<label for="star3" title="text">3 stars</label>
-				<input onclick="ratingMeanValue()" type="radio" id="star2" name="rate" value="2" />
+				<input onclick="rateTwo()" type="radio" id="star2" name="rate" value="2" />
 				<label for="star2" title="text">2 stars</label>
-				<input onclick="ratingMeanValue()" type="radio" id="star1" name="rate" value="1" />
+				<input onclick="rateOne()" type="radio" id="star1" name="rate" value="1" />
 				<label for="star1" title="text">1 star</label>
 			</div>
 		</div>
