--- a/assets/pages/KladdkakaRecept.html
+++ b/assets/pages/KladdkakaRecept.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" type="text/css" href="../style/Slutuppgift(recept)StyleSheet.css">
+	<link rel="stylesheet" type="text/css" href="https://yoshi175.github.io/VT17WebutvTakeyoshiMurase/assets/style/Slutuppgift(recept)StyleSheet.css">
 	<title>Recept på kladdkaka</title>
 	<style>
 		body {
@@ -54,6 +54,6 @@
 			</div>
 		</div>
 	</section>
-	<script type="text/javascript" src="../script/SlutuppgiftJavascript.js"></script>
+	<script type="text/javascript" src="https://yoshi175.github.io/VT17WebutvTakeyoshiMurase/assets/script/SlutuppgiftJavascript.js"></script>
 </body>
 </html>
