--- a/assets/pages/Uppgift1.html
+++ b/assets/pages/Uppgift1.html
@@ -36,7 +36,7 @@
 			</tr>
 			<tr>
 				<td>#5</td>
-				<td>Inte Klar</td>
+				<td>Klar</td>
 				<td><a href="https://yoshi175.github.io/VT17WebutvTakeyoshiMurase/assets/pages/Uppgift5.html">Uppgift 5 länk</a></td>
 			</tr>
 			<tr>
@@ -46,7 +46,7 @@
 			</tr>
 			<tr>
 				<td>#Slutuppgift</td>
-				<td>Inte Klar</td>
+				<td>Klar</td>
 				<td><a href="https://yoshi175.github.io/VT17WebutvTakeyoshiMurase/assets/pages/Slutuppgift.html">Slutuppgift länk</a></td>
 			</tr>
 		</tbody>
