--- a/assets/pages/KladdkakaRecept.html
+++ b/assets/pages/KladdkakaRecept.html
@@ -12,6 +12,7 @@
 	</style>
 </head>
 <body>
+	<a href="https://yoshi175.github.io/VT17WebutvTakeyoshiMurase/assets/pages/Slutuppgifthtml">Tillbaka</a>
 	<header>
 		<h1>Recept på kladdkaka &starf;</h1>
 	</header>
